<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Verification_Pages.RegisterActivity">
    <TextView
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/verify1"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="20sp"
        >

    </TextView>


    <TextView
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/verify"
        android:textColor="#4C4747"
        android:textSize="20sp"
        >

    </TextView>
    <androidx.cardview.widget.CardView

        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"

        app:cardCornerRadius="10dp"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:id="@+id/cardmiddle"
        android:layout_below="@+id/cardview1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="9"
            >

            <View


                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:layout_weight=".1"
                android:background="#F44336"
                >

            </View>


            <TextView
                android:padding="2dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="#FAE9D1"
                android:text="identity"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_weight="8.9"
                >

            </TextView>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <TextView
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="select category"
        android:textColor="@color/black"
        android:textSize="20sp"
        >

    </TextView>
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="5dp"
     android:entries="@array/category"
        android:id="@+id/spinner"
        android:background="@drawable/stroke_box"
        >

    </Spinner>
    <TextView
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nid"
        android:textColor="@color/black"
        android:textSize="20sp"
        >

    </TextView>

    <EditText
        android:id="@+id/et_nationalId"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="5dp"
        android:background="@drawable/stroke_box"
        android:hint="*************"
        android:inputType="number">

    </EditText>

    <TextView
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/brthday"
        android:textColor="@color/black"
        android:textSize="20sp"
        >

    </TextView>



    <EditText

        android:id="@+id/Datepick"
        android:layout_margin="10dp"
        android:gravity="center"
        android:hint="dd/mm/yyyy"
        android:inputType="date"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/stroke_box"
        />
    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#84D12B"
        android:text="যাচাই করুন ">

    </Button>


</LinearLayout>
