<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFBDA"

        android:id="@+id/relaytive1"
        >



    <LinearLayout
        android:id="@+id/Actionbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#FFF7EB"

        android:orientation="horizontal"
        android:padding="5dp"
        android:weightSum="3">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:scaleType="fitStart"
            android:src="@drawable/bdmap">

        </ImageView>

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:background="#FDC87A">

        </View>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="4dp"
            android:layout_weight="1"

            android:src="@drawable/safeicon">

        </ImageView>


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:layout_marginLeft="250dp"
            android:layout_weight="1"
            android:background="#F8EBEB"

            android:src="@drawable/ic_baseline_menu_24">

        </ImageView>
    </LinearLayout>

<androidx.cardview.widget.CardView
    app:cardCornerRadius="50dp"
   android:layout_marginTop="5dp"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
android:id="@+id/cardview1"
    android:layout_below="@+id/Actionbar"
    android:layout_width="match_parent"

    android:layout_height="300dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="2"
        android:background="#E4D4FF">
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="2"

            >

            <ImageButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
android:id="@+id/ibregister"
                android:background="#E4D4FF"
                android:layout_weight="1"


                android:src="@drawable/ic_baseline_person_outline_24">

            </ImageButton>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
android:textStyle="bold"
                android:text="@string/vaccinetext"
                android:textColor="#010310"
                android:textSize="20sp">

            </TextView>

        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:text="@string/nibondhon"
            android:textColor="#000002"
            android:textSize="20sp"

            android:gravity="center"
            >

        </TextView>
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="5"
                android:gravity="center"
                >

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"

                    android:layout_weight="1"

android:padding="10dp"
                    android:src="@drawable/ic_baseline_library_books_24">

                </ImageView>
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp"

                    android:layout_weight="1"


                    android:src="@drawable/ic_baseline_arrow_right_alt_24">

                </ImageView>
                <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"


                android:layout_weight="1"

                    android:padding="10dp"
                android:src="@drawable/ic_baseline_phone_android_24">

            </ImageView>
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"


                    android:layout_weight="1"

                    android:padding="10dp"
                    android:src="@drawable/ic_baseline_arrow_right_alt_24">

                </ImageView>
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"


                    android:layout_weight="1"
                    android:padding="10dp"

                    android:src="@drawable/ic_outline_info_24">

                </ImageView>

        </LinearLayout>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="#071875"

        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_gravity="bottom"

        >

    </View>

</androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView

        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"

        app:cardCornerRadius="10dp"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:id="@+id/cardmiddle"
        android:layout_below="@+id/cardview1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="9"
            >

            <View


                android:layout_width="10dp"
                android:layout_height="match_parent"
android:layout_weight=".1"
                android:background="#F44336"
                >

            </View>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="#FAE9D1"
                android:layout_weight="8.9"
                >

            </TextView>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/cardmiddle"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingRight="5dp"
            android:weightSum="2">

            <androidx.cardview.widget.CardView
                android:background="#E2FFC1"
                android:id="@+id/cdleft1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                app:cardCornerRadius="10dp"

                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#E2FFC1"
android:weightSum="2"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/ib1Status"
                        android:layout_weight=".8"
                        android:background="#E2FFC1"
                        android:layout_width="match_parent"
                        android:src="@drawable/ic_outline_check_circle_24"
                        android:layout_height="match_parent"

                        >


                    </ImageButton>
                    <TextView
                        android:background="#E2FFC1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/status"

                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:layout_weight="1.6"
                        android:gravity="center"

                        >

                    </TextView>



                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:layout_gravity="bottom"

                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="#075A0B"

                    >

                </View>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cdleftbottom"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                app:cardCornerRadius="20dp"


                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#B6E8E3"
                    android:orientation="vertical"
                    >



                    <ImageButton
                        android:background="#B6E8E3"
                        android:layout_weight=".8"
                        android:id="@+id/ib3Certificate"
                        android:layout_width="match_parent"

                        android:src="@drawable/certificate"
                        android:layout_height="match_parent"

                        >


                    </ImageButton>
                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/certificate"

                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:layout_weight="1.6"

                        android:gravity="center"
                        android:background="#B6E8E3"
                        >

                    </TextView>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:layout_gravity="bottom"

                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="#00FF73"

                    >

                </View>


            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="2">


            <androidx.cardview.widget.CardView
                android:id="@+id/cardright1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
              android:layout_marginBottom="10dp"
android:layout_weight="1"
                app:cardCornerRadius="20dp"


                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#F1F8AF"
                    android:orientation="vertical">
                    <ImageButton
                        android:id="@+id/ib2Card"
                        android:layout_weight=".8"
                        android:background="#F1F8AF"
                        android:layout_width="match_parent"

                        android:src="@drawable/nid"
                        android:layout_height="match_parent"

                        >


                    </ImageButton>
                    <TextView
                        android:background="#F1F8AF"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/card"

                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:layout_weight="1.6"

                        android:gravity="center"

                        >

                    </TextView>


                </LinearLayout>

                <View

                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:layout_gravity="bottom"

                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="#A9BA02"

                    >

                </View>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
android:layout_weight="1"

                android:id="@+id/cardright2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="20dp"

                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#FFB2AD"
                    android:orientation="vertical"
                    >
                    <ImageButton
                        android:layout_weight=".8"
                        android:background="#FFB2AD"
                        android:layout_width="match_parent"
                        android:id="@+id/ib4Question"
                        android:src="@drawable/ic_baseline_error_outline_24"
                        android:layout_height="match_parent"

                        >


                    </ImageButton>
                    <TextView
                        android:background="#FFB2AD"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/question"

                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:layout_weight="1.6"

                        android:gravity="center"

                        >

                    </TextView>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:layout_gravity="bottom"

                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="#CC040A"

                    >

                </View>

            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>
    </RelativeLayout>
</ScrollView>
